[BUGFIX] Alignment of meeting info dropdown

--- a/typo3conf/ext/theme/Resources/Private/Scss/Layout/_homepageNextEvent.scss
+++ b/typo3conf/ext/theme/Resources/Private/Scss/Layout/_homepageNextEvent.scss
@@ -183,7 +183,7 @@
 	}
 	&--linkbottom {
 		> .dropdown-menu {
-			left: -50%;
+			left: -67%;
 		}
 	}
 }
